--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,33 @@
-# Compiled executables
-*.exe
-*.out
-*.app
-
-# Object files
+# Build artifacts and temporary files
 *.o
 *.obj
-
-# Temporary files
 *.tmp
 *.temp
 
-# Test files
-test_*
-analyze_*
-my_huff.c
-main.huf
-main_fixed.huf
+# Generated files during development
 *.huf
-
-# Build artifacts
-test.o
-
-# PowerShell scripts (excluding build.bat)
-*.ps1
-
-# Makefiles (keeping build.bat only)
-Makefile
-Makefile.win
-
-# Test and auxiliary programs
-run_tests.bat
-test_algorithm.*
-test_flags.*
-
-# Decompressed output directories
 test_decompressed.cpp/
 decompressed/
+
+# Extra executables (keep only essential ones compiled from main.cpp)
+analyze_archive.exe
+test_algorithm.exe
+huff.exe
+
+# Extra C++ source files (keep only main.cpp and src/ directory)
+analyze_archive.cpp
+test_algorithm.cpp
+
+# Extra batch scripts (keep only build.bat)
+run_tests.bat
+test_algorithm.bat
+test_flags.bat
+
+# PowerShell scripts
+*.ps1
+
+# Windows Makefile (keep only main Makefile)
+Makefile.win
 
 # Visual Studio/VS Code files
 .vs/
@@ -53,15 +44,17 @@ decompressed/
 
 # Log files
 *.log
-logs.txt
-apel.txt
 
-# Windows thumbnail cache
+# System files
 Thumbs.db
 ehthumbs.db
-
-# macOS
 .DS_Store
-
-# Linux
 *~
+
+# Web UI - Node.js dependencies and temporary files
+web-ui/node_modules/
+web-ui/uploads/
+web-ui/downloads/
+web-ui/decompressed/
+web-ui/package-lock.json
+web-ui/.env
